Add parsing of false/true/na_values

--- a/notebooks/CSVSniffer.ipynb
+++ b/notebooks/CSVSniffer.ipynb
@@ -31,7 +31,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "728cf2fcdd46415caab3f5484c285235",
+       "model_id": "9a40eaac4ae44f47b3634151e37009e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -49,30 +49,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "tough-calculator",
+   "execution_count": 6,
+   "id": "another-saying",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'dtypes'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-c72ae01fdc1e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msniffer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_df2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtypes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'dtypes'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'index_col': False,\n",
+       " 'delimiter': ',',\n",
+       " 'header': 0,\n",
+       " 'names': None,\n",
+       " 'usecols': None,\n",
+       " 'squeeze': False,\n",
+       " 'prefix': None,\n",
+       " 'mangle_dupe_cols': True,\n",
+       " 'dtype': {'store_and_fwd_flag': 'category'},\n",
+       " 'engine': None,\n",
+       " 'converters': None,\n",
+       " 'true_values': ['ok', 'oui'],\n",
+       " 'false_values': ['N'],\n",
+       " 'skipinitialspace': False,\n",
+       " 'skiprows': None,\n",
+       " 'skipfooter': 0,\n",
+       " 'nrows': None,\n",
+       " 'na_values': None,\n",
+       " 'keep_default_na': True,\n",
+       " 'na_filter': True,\n",
+       " 'verbose': False,\n",
+       " 'skip_blank_lines': True,\n",
+       " 'parse_dates': None,\n",
+       " 'infer_datetime_format': False,\n",
+       " 'keep_date_col': False,\n",
+       " 'date_parser': None,\n",
+       " 'dayfirst': False,\n",
+       " 'cache_dates': True,\n",
+       " 'iterator': False,\n",
+       " 'chunksize': None,\n",
+       " 'compression': 'infer',\n",
+       " 'thousands': None,\n",
+       " 'decimal': '.',\n",
+       " 'lineterminator': None,\n",
+       " 'quotechar': '\"',\n",
+       " 'quoting': 0,\n",
+       " 'doublequote': False,\n",
+       " 'escapechar': None,\n",
+       " 'comment': None,\n",
+       " 'encoding': None,\n",
+       " 'dialect': None,\n",
+       " 'error_bad_lines': True,\n",
+       " 'warn_bad_lines': True,\n",
+       " 'delim_whitespace': False,\n",
+       " 'low_memory': True,\n",
+       " 'memory_map': False,\n",
+       " 'float_precision': None,\n",
+       " 'storage_options': None}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "sniffer._df2.dtypes"
+    "sniffer.params"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "joint-science",
+   "id": "characteristic-nursery",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -80,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "excellent-preference",
+   "id": "decimal-theater",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -88,15 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wrapped-affect",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "another-saying",
+   "id": "together-branch",
    "metadata": {},
    "outputs": [],
    "source": []
