fix sniffer tests

--- a/notebooks/CSVSniffer.ipynb
+++ b/notebooks/CSVSniffer.ipynb
@@ -31,7 +31,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a40eaac4ae44f47b3634151e37009e9",
+       "model_id": "4d55552416634246af88a7f586872042",
        "version_major": 2,
        "version_minor": 0
       },
@@ -49,76 +49,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "another-saying",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'index_col': False,\n",
-       " 'delimiter': ',',\n",
-       " 'header': 0,\n",
-       " 'names': None,\n",
-       " 'usecols': None,\n",
-       " 'squeeze': False,\n",
-       " 'prefix': None,\n",
-       " 'mangle_dupe_cols': True,\n",
-       " 'dtype': {'store_and_fwd_flag': 'category'},\n",
-       " 'engine': None,\n",
-       " 'converters': None,\n",
-       " 'true_values': ['ok', 'oui'],\n",
-       " 'false_values': ['N'],\n",
-       " 'skipinitialspace': False,\n",
-       " 'skiprows': None,\n",
-       " 'skipfooter': 0,\n",
-       " 'nrows': None,\n",
-       " 'na_values': None,\n",
-       " 'keep_default_na': True,\n",
-       " 'na_filter': True,\n",
-       " 'verbose': False,\n",
-       " 'skip_blank_lines': True,\n",
-       " 'parse_dates': None,\n",
-       " 'infer_datetime_format': False,\n",
-       " 'keep_date_col': False,\n",
-       " 'date_parser': None,\n",
-       " 'dayfirst': False,\n",
-       " 'cache_dates': True,\n",
-       " 'iterator': False,\n",
-       " 'chunksize': None,\n",
-       " 'compression': 'infer',\n",
-       " 'thousands': None,\n",
-       " 'decimal': '.',\n",
-       " 'lineterminator': None,\n",
-       " 'quotechar': '\"',\n",
-       " 'quoting': 0,\n",
-       " 'doublequote': False,\n",
-       " 'escapechar': None,\n",
-       " 'comment': None,\n",
-       " 'encoding': None,\n",
-       " 'dialect': None,\n",
-       " 'error_bad_lines': True,\n",
-       " 'warn_bad_lines': True,\n",
-       " 'delim_whitespace': False,\n",
-       " 'low_memory': True,\n",
-       " 'memory_map': False,\n",
-       " 'float_precision': None,\n",
-       " 'storage_options': None}"
+       "\"{'index_col': False, 'delimiter': ',', 'header': 0, 'doublequote': False}\""
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sniffer.params"
+    "sniffer.cmdline.value"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "characteristic-nursery",
+   "id": "based-curve",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -126,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "decimal-theater",
+   "id": "regular-restoration",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -134,7 +87,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "together-branch",
+   "id": "prepared-apparatus",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "requested-genius",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "parallel-bruce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "unique-conclusion",
    "metadata": {},
    "outputs": [],
    "source": []
