fix min/max on histogram2d

--- a/notebooks/ScalerDemo.ipynb
+++ b/notebooks/ScalerDemo.ipynb
@@ -45,8 +45,10 @@
     "                          'B', \n",
     "                          xbins=256, ybins=256)\n",
     "histogram2d.input.table = sc.output.result\n",
-    "histogram2d.input.min = sc.min.output.result\n",
-    "histogram2d.input.max = sc.max.output.result\n",
+    "cmin = Constant(table=PsDict({'A': 0.0, 'B':0.0}))\n",
+    "cmax = Constant(table=PsDict({'A': 1.0, 'B':1.0}))\n",
+    "histogram2d.input.min = cmin.output.result\n",
+    "histogram2d.input.max = cmax.output.result\n",
     "heatmap=Heatmap() # compute the Heatmap\n",
     "heatmap.input.array = histogram2d.output.result"
    ]
@@ -64,7 +66,7 @@
    "execution_count": null,
    "id": "fleet-final",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
