new use of the jupyter asyncio event loop

--- a/notebooks/ScalerDemoCellCmd.ipynb
+++ b/notebooks/ScalerDemoCellCmd.ipynb
@@ -19,6 +19,7 @@
     "import numpy as np\n",
     "import tempfile as tf\n",
     "import os\n",
+    "import progressivis\n",
     "from progressivis import Scheduler, Print\n",
     "from progressivis.io import SimpleCSVLoader, DynVar\n",
     "from progressivis.stats import Histogram2D, Min, Max\n",
@@ -76,7 +77,7 @@
     "async def _after_run(m, run_number):\n",
     "    global wg\n",
     "    img = m.get_image_bin()\n",
-    "    if img is None:\n",
+    "    if img is None:    \n",
     "        return\n",
     "    if wg is None:\n",
     "        wg = ipw.Image(value=img, width=512, height=512)\n",
@@ -89,6 +90,67 @@
     "isco = IScalerOut(sc)\n",
     "display(isco)\n",
     "gather_and_run(s.start())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "outdoor-relative",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dvar.result['ignore_max']=15;print(dvar.result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "scientific-surgeon",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#type(dvar.result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "weighted-eagle",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dvar.result['ignore_max']=50;print(dvar.result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "continuous-asbestos",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext progressivis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "needed-kennedy",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%progressivis dvar.result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "interested-arizona",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%progressivis dvar.result\n",
+    "reset: True"
    ]
   }
  ],
