--- a/notebooks/ScalerDemoCellCmd.ipynb
+++ b/notebooks/ScalerDemoCellCmd.ipynb
@@ -89,7 +89,7 @@
     "display(isc)\n",
     "isco = IScalerOut(sc)\n",
     "display(isco)\n",
-    "gather_and_run(s.start())"
+    "s.task_start();"
    ]
   },
   {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "weighted-eagle",
+   "id": "mounted-weapon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,32 +125,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "continuous-asbestos",
+   "id": "mysterious-college",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext progressivis"
+    "#%load_ext progressivis"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "needed-kennedy",
+   "id": "federal-persian",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%progressivis dvar.result"
+    "#%progressivis dvar.result"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interested-arizona",
+   "id": "english-scottish",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%progressivis dvar.result\n",
-    "reset: True"
+    "#%%progressivis dvar.result\n",
+    "#reset: True"
    ]
   }
  ],
