--- a/notebooks/ScalerDemo.ipynb
+++ b/notebooks/ScalerDemo.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "geographic-shannon",
    "metadata": {},
    "outputs": [],
@@ -63,12 +63,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fleet-final",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c93007d3cafc47c782a06dad8ac72427",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IScalerIn(children=(Label(value='Reset threshold:'), IntSlider(value=1000, continuous_update=False, max=100000…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b7646e3e990242bf985a53ea6bf52847",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IScalerOut(children=(Label(value='Clipped:'), Label(value=''), Label(value='Ignored:'), Label(value=''), Label…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "705cf6909788493ebe7fe3d7e32eacc5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\x01\\x00\\x00\\x00\\x01\\x00\\x10\\x00\\x00\\x00\\x00)\\x89+\\xf…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import ipywidgets as ipw\n",
     "from IPython.display import display\n",
@@ -88,7 +131,7 @@
     "display(isc)\n",
     "isco = IScalerOut(sc)\n",
     "display(isco)\n",
-    "gather_and_run(s.start())"
+    "s.task_start();"
    ]
   }
  ],
