from_input magic command

--- a/notebooks/ScalerDemoCellCmd.ipynb
+++ b/notebooks/ScalerDemoCellCmd.ipynb
@@ -85,8 +85,8 @@
     "    else:\n",
     "        wg.value = img\n",
     "heatmap.after_run_proc = _after_run\n",
-    "isc = IScalerIn(sc)\n",
-    "display(isc)\n",
+    "#isc = IScalerIn(sc)\n",
+    "#display(isc)\n",
     "isco = IScalerOut(sc)\n",
     "display(isco)\n",
     "s.task_start();"
@@ -109,13 +109,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#type(dvar.result)"
+    "#type(dvar.result)import yaml,sys"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mounted-weapon",
+   "id": "appreciated-symposium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,32 +125,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mysterious-college",
+   "id": "preceding-horizontal",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%load_ext progressivis"
+    "%load_ext progressivis"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "federal-persian",
+   "id": "viral-influence",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%progressivis dvar.result"
+    "%progressivis dvar.result"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "english-scottish",
+   "id": "imperial-labor",
    "metadata": {},
    "outputs": [],
    "source": [
     "#%%progressivis dvar.result\n",
     "#reset: True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "removable-rebound",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%from_input dvar\n",
+    "delta: -1\n",
+    "ignore_max: 3\n",
+    "reset: True"
    ]
   }
  ],
