widgets became non-awaitable+other improvements

--- a/notebooks/MulticlassScatterplotDemo.ipynb
+++ b/notebooks/MulticlassScatterplotDemo.ipynb
@@ -8,7 +8,6 @@
    },
    "outputs": [],
    "source": [
-    "%gui asyncio\n",
     "from progressivis_nb_widgets import *\n",
     "sc = Scatterplot()\n",
     "gr = ModuleGraph()"
@@ -86,15 +85,8 @@
     "    ('dropoff', 'dropoff_longitude', 'dropoff_latitude')], approximate=True)\n",
     "MULTICLASS.create_dependent_modules(CSV, 'result')\n",
     "\n",
-    "async def control_panel(action):\n",
-    "    btn, cb =  cpanel.cb_args(action)\n",
-    "    while True:\n",
-    "        await wait_for_click(btn, cb)\n",
-    "    \n",
-    "aio.create_task(s.start(coros=sc.link_module(MULTICLASS)+\n",
-    "                               [control_panel(\"resume\"),\n",
-    "                               control_panel(\"stop\"), \n",
-    "                               control_panel(\"step\")]));"
+    "sc.link_module(MULTICLASS)\n",
+    "s.task_start();"
    ]
   },
   {
@@ -133,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
