--- a/notebooks/ScalerDemoCellCmd.ipynb
+++ b/notebooks/ScalerDemoCellCmd.ipynb
@@ -28,7 +28,6 @@
     "from progressivis.table.constant import Constant\n",
     "from progressivis.utils.psdict import PsDict\n",
     "from progressivis.stats.scaling import MinMaxScaler\n",
-    "from progressivis.core.utils import gather_and_run\n",
     "from progressivis_nb_widgets.nbwidgets import IScalerIn, IScalerOut\n",
     "from progressivis.datasets import get_dataset\n",
     "\n",
@@ -99,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#dvar.result['ignore_max']=15;print(dvar.result)"
+    "dvar.result['reset']=True"
    ]
   },
   {
@@ -129,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext progressivis"
+    "#%load_ext progressivis"
    ]
   },
   {
@@ -139,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%progressivis dvar.result"
+    "#%progressivis dvar.result"
    ]
   },
   {
@@ -150,7 +149,8 @@
    "outputs": [],
    "source": [
     "#%%progressivis dvar.result\n",
-    "#reset: True"
+    "reset: True\n",
+    "time: 11111"
    ]
   },
   {
@@ -160,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%from_input dvar\n",
+    "#%%from_input dvar\n",
     "delta: -1\n",
     "ignore_max: 3\n",
     "reset: True"
