--- a/demos/MBKMeansWithLabelsDemo.ipynb
+++ b/demos/MBKMeansWithLabelsDemo.ipynb
@@ -21,7 +21,6 @@
     "from progressivis.vis import MCScatterPlot\n",
     "from progressivis.datasets import get_dataset\n",
     "from progressivis.stats import RandomTable\n",
-    "from progressivis.core.utils import gather_and_run\n",
     "from progressivis.utils.psdict import PsDict\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -69,7 +68,7 @@
     "# psboard.register_visualisation(FooWidget(), bar_module, glue=glue_func)\n",
     "# NB: glue_func(widget, module)-> [coroutine] must be provided\n",
     "# Start application :\n",
-    "gather_and_run(s.start(), *psboard.coroutines)"
+    "s.task_start();"
    ]
   },
   {
@@ -107,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
