--- a/demos/PsBoardDemo.ipynb
+++ b/demos/PsBoardDemo.ipynb
@@ -19,7 +19,6 @@
    "source": [
     "import pandas as pd\n",
     "from progressivis.core import Scheduler, Every\n",
-    "from progressivis.core.utils import gather_and_run\n",
     "from progressivis.table import Table\n",
     "from progressivis.vis import MCScatterPlot\n",
     "from progressivis.io import CSVLoader\n",
@@ -75,7 +74,7 @@
     "# NB: glue_func(widget, module)-> [coroutine] must be provided\n",
     "# Start application :\n",
     "\n",
-    "gather_and_run(s.start(), *psboard.coroutines)"
+    "s.task_start();"
    ]
   },
   {
@@ -115,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
