--- a/notebooks/HeatmapDemo.ipynb
+++ b/notebooks/HeatmapDemo.ipynb
@@ -68,7 +68,7 @@
     "        wg.value = img\n",
     "heatmap.after_run_proc = _after_run\n",
     "\n",
-    "await s.start()"
+    "s.task_start();"
    ]
   }
  ],
@@ -88,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
