--- a/notebooks/PPCAProjectionToy.ipynb
+++ b/notebooks/PPCAProjectionToy.ipynb
@@ -22,7 +22,6 @@
     "from progressivis.stats.blobs_table import BlobsTable\n",
     "from progressivis.vis import MCScatterPlot\n",
     "from progressivis.utils.psdict import PsDict\n",
-    "from progressivis.core.utils import gather_and_run\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -56,8 +55,8 @@
     "    sp[cn].min_value.result = PsDict({'_pc0': -np.inf, '_pc1': -np.inf})\n",
     "    sp[cn].max_value.result = PsDict({'_pc0': np.inf, '_pc1': np.inf})\n",
     "sp_widget = Scatterplot()\n",
-    "widget_coros = sp_widget.link_module(sp)\n",
-    "gather_and_run(s.start(tick_proc=moderator), *widget_coros)"
+    "sp_widget.link_module(sp)\n",
+    "s.task_start(tick_proc=moderator);"
    ]
   },
   {
@@ -88,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
