--- a/notebooks/PsBoardDemo.ipynb
+++ b/notebooks/PsBoardDemo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from progressivis.core import Scheduler, Every\n",
-    "from progressivis.core.utils import gather_and_run\n",
     "from progressivis.table import Table\n",
     "from progressivis.vis import MCScatterPlot\n",
     "from progressivis.io import CSVLoader\n",
@@ -83,14 +82,36 @@
     "# NB: glue_func(widget, module)-> [coroutine] must be provided\n",
     "# Start application :\n",
     "\n",
-    "gather_and_run(s.start(), *psboard.coroutines)"
+    "s.task_start();"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1cc8ecd5a8a14c03b94387a3aa3cde19",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "PsBoard(children=(ControlPanel(children=(Button(description='Resume', disabled=True, icon='play', style=Button…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "************************"
+     ]
+    }
+   ],
    "source": [
     "from sidecar import Sidecar\n",
     "sc = Sidecar(title='Sidecar Output')\n",
@@ -122,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
