improve scheduler repr_html [CI SKIP]

--- a/notebooks/HeatmapDemo.ipynb
+++ b/notebooks/HeatmapDemo.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "geographic-shannon",
    "metadata": {},
    "outputs": [],
@@ -48,10 +48,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fleet-final",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7fa382a1f4f74a7987fab2eb99908c87",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\x01\\x00\\x00\\x00\\x01\\x00\\x10\\x00\\x00\\x00\\x00)\\x89+\\xf…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import ipywidgets as ipw\n",
     "from IPython.display import display\n",
@@ -70,6 +85,131 @@
     "\n",
     "s.task_start();"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "recent-marks",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<p><b>Scheduler</b> 0x7f7a904dae50 <b>modules:</b> 5,\n",
+       "        <b>running</b>,\n",
+       "        <b>run number:</b> 68\n",
+       "</p>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Id</th><th>Class</th><th>State</th><th>Last Update</th><th>Order</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>ready</td><td>66</td><td>0</td><tr><td>min_1</td><td>min</td><td>blocked</td><td>67</td><td>1</td><tr><td>max_1</td><td>max</td><td>blocked</td><td>68</td><td>2</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>blocked</td><td>64</td><td>3</td><tr><td>heatmap_1</td><td>heatmap</td><td>blocked</td><td>65</td><td>4</td></tbody></table>"
+      ],
+      "text/plain": [
+       "<progressivis.core.scheduler.Scheduler at 0x7f7a904dae50>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "convenient-arrow",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<p><b>Scheduler</b> 0x7f7a904dae50 <b>modules:</b> 5,\n",
+       "        <b>running</b>,\n",
+       "        <b>run number:</b> 248\n",
+       "</p>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Id</th><th>Class</th><th>State</th><th>Last Update</th><th>Order</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>ready</td><td>246</td><td>0</td><tr><td>min_1</td><td>min</td><td>blocked</td><td>247</td><td>1</td><tr><td>max_1</td><td>max</td><td>blocked</td><td>248</td><td>2</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>blocked</td><td>244</td><td>3</td><tr><td>heatmap_1</td><td>heatmap</td><td>blocked</td><td>245</td><td>4</td></tbody></table>"
+      ],
+      "text/plain": [
+       "<progressivis.core.scheduler.Scheduler at 0x7f7a904dae50>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "regional-florist",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Task pending name='Task-4' coro=<Scheduler.stop() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:509>>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.task_stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "radical-illustration",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -88,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
