histograms for scaled attributes

--- a/notebooks/ScalerDemoCellCmd.ipynb
+++ b/notebooks/ScalerDemoCellCmd.ipynb
@@ -35,8 +35,8 @@
     "cols = ['A', 'B']\n",
     "csv = SimpleCSVLoader(get_dataset('bigfile_multiscale'), usecols=cols, throttle=100)\n",
     "dvar = DynVar({'delta': -5, 'ignore_max':10})\n",
-    "sc = MinMaxScaler(reset_threshold=10_000)\n",
-    "sc.create_dependent_modules(csv)\n",
+    "sc = MinMaxScaler(reset_threshold=10_000, usecols=['A', 'B'])\n",
+    "sc.create_dependent_modules(csv, hist=True)\n",
     "sc.control = dvar\n",
     "sc.input.control = dvar.output.result\n",
     "pr=Print(proc=lambda x: None, scheduler=s)\n",
@@ -84,8 +84,8 @@
     "    else:\n",
     "        wg.value = img\n",
     "heatmap.after_run_proc = _after_run\n",
-    "#isc = IScalerIn(sc)\n",
-    "#display(isc)\n",
+    "isc = IScalerIn(sc)\n",
+    "display(isc)\n",
     "isco = IScalerOut(sc)\n",
     "display(isco)\n",
     "s.task_start();"
@@ -148,7 +148,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%%progressivis dvar.result\n",
     "reset: True\n",
     "time: 11111"
    ]
