vega-lite issue sample

--- a/notebooks/VegaIssue.ipynb
+++ b/notebooks/VegaIssue.ipynb
@@ -12,10 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "downtown-toronto",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "82c34d8acc8647628b57d1b1f1558bad",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VegaWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import time\n",
@@ -66,10 +81,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "personalized-clone",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e7a3a2f1530d488480d6fcdba9627907",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VegaWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import time\n",
@@ -107,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "compact-costume",
    "metadata": {},
    "outputs": [],
@@ -125,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "directed-addition",
+   "id": "polish-damages",
    "metadata": {},
    "source": [
     "NB: I tried to introduce a delay between the widget creation and the update's loop instead of splitting the code in two cells but the problem wasn't fixed this way ..."
@@ -138,26 +168,30 @@
    "source": [
     "### This implementation works fine\n",
     "\n",
-    "This implementation is almost the same but it is setting widget.spec instead of using widget.update(). It works fine: no blinks, the ticks are OKfor sl in np.split(rdata, steps):\n",
-    "    h, _ = np.histogram(sl, bins=nbins, range=(-1.0,1.0))\n",
-    "    hist += h\n",
-    "    source = pd.DataFrame({\n",
-    "            'x': range(nbins),\n",
-    "            'y': hist,\n",
-    "        })\n",
-    "    spec_with_data[\"data\"] = {\n",
-    "            \"name\": \"data\",\n",
-    "            \"values\": source.to_dict(orient='records'),\n",
-    "        }\n",
-    "    widget.spec = spec_with_data"
+    "This implementation is almost the same but it is setting widget.spec instead of using widget.update(). It works fine: no blinks, the ticks are OK"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "rental-alfred",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d860825388454c96a131270028b0ee27",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VegaWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import altair as alt\n",
