vega-lite issue sample

--- a/notebooks/VegaIssue.ipynb
+++ b/notebooks/VegaIssue.ipynb
@@ -12,25 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "downtown-toronto",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82c34d8acc8647628b57d1b1f1558bad",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VegaWidget()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import time\n",
@@ -42,7 +27,18 @@
     "    '$schema': 'https://vega.github.io/schema/vega-lite/v4.8.1.json',\n",
     "     'config': {'view': {'continuousHeight': 300, 'continuousWidth': 400}},\n",
     "     'data': {'name': 'data'},\n",
-    "     'encoding': {\n",
+    "     'encoding': {for sl in np.split(rdata, steps):\n",
+    "    h, _ = np.histogram(sl, bins=nbins, range=(-1.0,1.0))\n",
+    "    hist += h\n",
+    "    source = pd.DataFrame({\n",
+    "            'x': range(nbins),\n",
+    "            'y': hist,\n",
+    "        })\n",
+    "    spec_with_data[\"data\"] = {\n",
+    "            \"name\": \"data\",\n",
+    "            \"values\": source.to_dict(orient='records'),\n",
+    "        }\n",
+    "    widget.spec = spec_with_data\n",
     "             'x': {'field': 'x', 'type': 'quantitative', 'bin': {'maxbins': nbins}},\n",
     "              'y': {'field': 'y', 'type': 'quantitative'}\n",
     "             },\n",
@@ -81,25 +77,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "personalized-clone",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7a3a2f1530d488480d6fcdba9627907",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VegaWidget()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import time\n",
@@ -137,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "compact-costume",
    "metadata": {},
    "outputs": [],
@@ -173,25 +154,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "rental-alfred",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d860825388454c96a131270028b0ee27",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VegaWidget()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import altair as alt\n",
@@ -219,18 +185,7 @@
     "    h, _ = np.histogram(sl, bins=nbins, range=(-1.0,1.0))\n",
     "    hist += h\n",
     "    source = pd.DataFrame({\n",
-    "            'x': range(nbins),for sl in np.split(rdata, steps):\n",
-    "    h, _ = np.histogram(sl, bins=nbins, range=(-1.0,1.0))\n",
-    "    hist += h\n",
-    "    source = pd.DataFrame({\n",
     "            'x': range(nbins),\n",
-    "            'y': hist,\n",
-    "        })\n",
-    "    spec_with_data[\"data\"] = {\n",
-    "            \"name\": \"data\",\n",
-    "            \"values\": source.to_dict(orient='records'),\n",
-    "        }\n",
-    "    widget.spec = spec_with_data\n",
     "            'y': hist,\n",
     "        })\n",
     "    spec_with_data[\"data\"] = {\n",
