--- a/notebooks/VegaIssue.ipynb
+++ b/notebooks/VegaIssue.ipynb
@@ -15,7 +15,22 @@
    "execution_count": null,
    "id": "downtown-toronto",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "03bf67590c3744b1a9ca7aaf78c1efeb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VegaWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import time\n",
@@ -27,20 +42,9 @@
     "    '$schema': 'https://vega.github.io/schema/vega-lite/v4.8.1.json',\n",
     "     'config': {'view': {'continuousHeight': 300, 'continuousWidth': 400}},\n",
     "     'data': {'name': 'data'},\n",
-    "     'encoding': {for sl in np.split(rdata, steps):\n",
-    "    h, _ = np.histogram(sl, bins=nbins, range=(-1.0,1.0))\n",
-    "    hist += h\n",
-    "    source = pd.DataFrame({\n",
-    "            'x': range(nbins),\n",
-    "            'y': hist,\n",
-    "        })\n",
-    "    spec_with_data[\"data\"] = {\n",
-    "            \"name\": \"data\",\n",
-    "            \"values\": source.to_dict(orient='records'),\n",
-    "        }\n",
-    "    widget.spec = spec_with_data\n",
-    "             'x': {'field': 'x', 'type': 'quantitative', 'bin': {'maxbins': nbins}},\n",
-    "              'y': {'field': 'y', 'type': 'quantitative'}\n",
+    "     'encoding': {\n",
+    "                  'x': {'field': 'x', 'type': 'quantitative', 'bin': {'maxbins': nbins}},\n",
+    "                  'y': {'field': 'y', 'type': 'quantitative'}\n",
     "             },\n",
     "     'mark': 'bar'}\n",
     "spec_with_data = spec_no_data.copy()\n",
