--- a/notebooks/VegaIssue.ipynb
+++ b/notebooks/VegaIssue.ipynb
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "downtown-toronto",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03bf67590c3744b1a9ca7aaf78c1efeb",
+       "model_id": "aa72565861d445b88baf09449f4876a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -37,13 +37,13 @@
     "import asyncio as aio\n",
     "import pandas as pd\n",
     "from vega.widget import VegaWidget\n",
-    "nbins = 200\n",
+    "nbins = 50\n",
     "spec_no_data = {\n",
     "    '$schema': 'https://vega.github.io/schema/vega-lite/v4.8.1.json',\n",
     "     'config': {'view': {'continuousHeight': 300, 'continuousWidth': 400}},\n",
     "     'data': {'name': 'data'},\n",
     "     'encoding': {\n",
-    "                  'x': {'field': 'x', 'type': 'quantitative', 'bin': {'maxbins': nbins}},\n",
+    "                  'x': {'field': 'x', 'type': 'ordinal'},\n",
     "                  'y': {'field': 'y', 'type': 'quantitative'}\n",
     "             },\n",
     "     'mark': 'bar'}\n",
@@ -81,23 +81,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "personalized-clone",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "83e8c3201860422ba65118d4789145df",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VegaWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import time\n",
-    "import asyncio as aio\n",
     "import pandas as pd\n",
     "from vega.widget import VegaWidget\n",
-    "nbins = 200\n",
+    "nbins = 50\n",
     "spec_no_data = {\n",
     "    '$schema': 'https://vega.github.io/schema/vega-lite/v4.8.1.json',\n",
     "     'config': {'view': {'continuousHeight': 300, 'continuousWidth': 400}},\n",
     "     'data': {'name': 'data'},\n",
     "     'encoding': {\n",
-    "             'x': {'field': 'x', 'type': 'quantitative', 'bin': {'maxbins': nbins}},\n",
+    "             'x': {'field': 'x', 'type': 'ordinal'},\n",
     "              'y': {'field': 'y', 'type': 'quantitative'}\n",
     "             },\n",
     "     'mark': 'bar'}\n",
@@ -122,10 +136,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "compact-costume",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOPub message rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_msg_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n",
+      "IOPub message rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_msg_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n",
+      "IOPub message rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_msg_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n",
+      "IOPub message rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_msg_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for sl in np.split(rdata, steps):\n",
     "    h, _ = np.histogram(sl, bins=nbins, range=(-1.0,1.0))\n",
@@ -158,22 +219,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "rental-alfred",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a8ed21ccf739467ab5d438575e4653df",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VegaWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOPub message rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_msg_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n",
+      "IOPub message rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_msg_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import altair as alt\n",
     "import pandas as pd\n",
     "from vega.widget import VegaWidget\n",
-    "nbins = 200\n",
+    "nbins = 50\n",
     "spec_no_data = {\n",
     "    '$schema': 'https://vega.github.io/schema/vega-lite/v4.8.1.json',\n",
     "     'config': {'view': {'continuousHeight': 300, 'continuousWidth': 400}},\n",
     "     'data': {'name': 'data'},\n",
     "     'encoding': {\n",
-    "             'x': {'field': 'x', 'type': 'quantitative', 'bin': {'maxbins': nbins}},\n",
+    "             'x': {'field': 'x', 'type': 'ordinal'},\n",
     "              'y': {'field': 'y', 'type': 'quantitative'}\n",
     "             },\n",
     "     'mark': 'bar'}\n",
@@ -216,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
